--- a/ELEC5514_final_report_simulation.ipynb
+++ b/ELEC5514_final_report_simulation.ipynb
@@ -6,7 +6,7 @@
       "name": "ELEC5514 final report simulation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN435/9D9IIDHBpzZ682P+G",
+      "authorship_tag": "ABX9TyMz6w1Yn/x5TeCckDMRWR9M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/babsyco/WirelessSensorNetwork_CLD/blob/main/ELEC5514_final_report_simulation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TTv7G-x764i7"
+      },
+      "source": [
+        "##There are visualisations of the 16 simulations/data at the bottom of this notebook:"
       ]
     },
     {
@@ -171,7 +180,7 @@
         "    global power_increase\n",
         "    self.broadcast_dist = self.broadcast_dist + power_increase\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,7 +240,7 @@
         "        i.scan_for_requests()\n",
         "  print('\\n(Idle nodes run.)\\n')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +390,7 @@
         "  plt.savefig(filename)\n",
         "  files.download(filename)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3287,7 +3296,7 @@
         "    print(all_sim_distances_adj[i])\n",
         "    print(all_sim_route_distances[i])\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
